[#75679462] Fix sidebar size to align with navbar's first divider

--- a/app/assets/stylesheets/express_admin/sections/_sidebar.sass
+++ b/app/assets/stylesheets/express_admin/sections/_sidebar.sass
@@ -3,7 +3,7 @@
   z-index: 49
   background: $block-alt-bg-color
   display: block
-  width: 206px
+  width: 182px
   height: 100%
   top: 0
   left: 0
